--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
       - main
       - develop
 
+permissions:
+  contents: read      # コード読み取り（チェックアウトに必要）
+  actions: read       # CIステータス読み取りに必要（前回追加済み）
+  issues: write       # PRコメント投稿、Issue作成/コメントに必要
+  pull-requests: write # PRのラベルやレビューなど、より広範な操作に必要（issues: writeでコメントは可能ですが、念のため）
+
 jobs:
   # 1. Python テストとコードカバレッジ
   test:
