--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
         with:
-          recreate: true
+          hide_and_recreate: true
+          hide_classify: "OUTDATED"
           path: code-coverage-results.md
 
   # 2. Docker ビルド一貫性チェック
