--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
         with:
-          delete: true
+          recreate: true
           path: code-coverage-results.md
 
   # 2. Docker ビルド一貫性チェック
