--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,12 @@ jobs:
           recreate: true
           path: code-coverage-results.md
 
+      - name: Collect metrics and report by octocov
+        uses: k1LoW/octocov-action@v1
+        with:
+          coverage-report: 'coverage.xml'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
   # 2. Docker ビルド一貫性チェック
   docker_build_check:
     name: Docker Build Check
