--- a/.octocov.yml
+++ b/.octocov.yml
@@ -1,2 +1,9 @@
 comment:
   if: is_pull_request
+report:
+  if: is_default_branch
+  datastores:
+    - artifact://${GITHUB_REPOSITORY}
+diff:
+  datastores:
+    - artifact://${GITHUB_REPOSITORY}
